# agentdata

./: .dockerignore  .env.example  .gitignore  CLAUDE (1).md  CLAUDE.md  Dockerfile  NOTES_RAILS.md  README.md  llms.txt  package.json  pyproject.toml  render-bazaar.yaml  render.yaml  server.json
.claude/agents/: ceo-agent.md  cto-agent.md
agile-owner/: GoogleService-Info.plist
cto/cto/: SKILL_DESCRIPTION.md
decisions/: DECISION_LOG.md
decisions/adr/: ADR-001-architecture-endpoint-1.md
docs/: api.md  bazaar-deploy.md  e2e-testnet.md  publish-mcp-registry.md  publish-npm.md  x402-integration.md
scripts/: check_bazaar_discovery.py  e2e_buyer.py  verify_amm_onchain.py
src/agentdata/: __init__.py  asgi.py  config.py  safety.py
src/agentdata/api/: __init__.py  app.py  pricing.py  schemas.py
src/agentdata/chain/: __init__.py  onchain.py  provider.py
src/agentdata/compute/: __init__.py  amm.py  depeg.py  fragility.py  routing.py  tiers.py
src/agentdata/mcp/: __init__.py  server.py  tool_schema.py
src/agentdata/monitoring/: __init__.py  dashboard.py  logging_setup.py  metrics.py
src/agentdata/payment/: __init__.py  facilitator.py  middleware.py  pricing_402.py  rail.py
src/agentdata/web/: __init__.py  landing.py
tests/: test_amm.py  test_amm_onchain.py  test_api.py  test_bazaar.py  test_depeg.py  test_deploy.py  test_discovery.py  test_e2e_buyer.py  test_edge_cases.py  test_fragility_routing.py  test_mcp.py  test_network_guard.py  test_payment.py  test_payment_hardening.py  test_rail.py  test_tiers.py
